# cryptome

./: README.md  cryptome.py  schonhage_strassen.py
opengl/: CMakeLists.txt  sphere.cpp  sphere.sh
opengl/2dpainting/: CMakeLists.txt
opengl/glcube/: CMakeLists.txt  main.cpp  mainwidget.h  vshader.glsl
opengl/gltriangle/: openglwindo.pro  openglwindow.cpp
opengl/glwidget/: CMakeLists.txt  glwidget.cpp  glwidget.h  logo.cpp  logo.h  window.h
opengl/sphere/: CMakeLists.txt  buildit.sh  sphere.cpp
opengl/triangle/: CMakeLists.txt  triangle.cpp
python/: csharp2python.py  fourier.py
vulkan/: CMakeLists.txt  vulkan3d.cpp
